--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1042,3 +1042,150 @@
         height: 80px;
     }
 }
+
+@media (max-width: 900px) {
+    .drop__content-flex {
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .drop__content-flex-left {
+        width: 100%;
+    }
+
+    .drop__content-flex-right {
+        text-align: end;
+        width: 100%;
+        margin-top: 58px;
+    }
+
+    .drop__content-flex-right .flex-right-lan a:nth-child(3) {
+        margin-right: 25px;
+    }
+
+    .drop__content-top .drop__top-title {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 39px;
+    }
+
+    .drop__content-top .drop__top-text {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 24px;
+        color: #FAFAFA;
+        opacity: 0.6;
+    }
+
+    .drop__content-flex-left .block-flex-one h5 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 22px;
+        color: #FAFAFA;
+    }
+
+    .drop__content {
+        padding-top: 88px;
+    }
+
+    .drop__content-flex {
+        margin-top: 58px;
+    }
+
+    .drop__content-flex-left .block-flex-one:nth-child(2) {
+        margin: 0 20px;
+    }
+
+    .drop__content button {
+        display: block;
+        margin-top: -120px;
+    }
+}
+
+@media (max-width: 537px) {
+    .drop__content {
+        padding-left: 0;
+        padding-top: 56px;
+    }
+
+    .drop__content-top .drop__top-title {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 32px;
+        color: #FAFAFA;
+    }
+
+    .drop__content-top .drop__top-text {
+        max-width: 100%;
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 24px;
+        color: #FAFAFA;
+        opacity: 0.6;
+    }
+
+    .drop__content-flex-left .block-flex-one:nth-child(2) {
+        width: 50%;
+    }
+
+    .drop__content-flex-left .block-flex-one h5 {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 22px;
+        color: #FAFAFA;
+    }
+
+    .drop__content-flex-left .block-flex-one:nth-child(3) {
+        margin-top: 40px;
+    }
+
+    .drop__content-flex-right {
+        text-align: start;
+        margin-top: 40px;
+    }
+
+    .drop__content button {
+        display: block;
+        margin-top: 0;
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 11px;
+        line-height: 13px;
+        text-align: center;
+        letter-spacing: 0.06em;
+    /* 1 */
+        color: #080808;
+    }
+
+    .footer .container {
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -ms-flex-align: start;
+        align-items: flex-start;
+    }
+
+    .footer .footer-title {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 430px) {
+    .drop__content-flex-left .block-flex-one:nth-child(2) {
+        width: 40%;
+        margin: 0;
+    }
+
+    .drop__content-flex {
+        margin-bottom: 48px;
+    }
+}
